{
    "name": "TouchInput",
    "maps": [
        {
            "name": "Touch",
            "id": "bdf6c105-417a-4e90-bbdd-0e59e8babba0",
            "actions": [
                {
                    "name": "TouchPoint",
                    "type": "PassThrough",
                    "id": "6faf7dff-c7e5-4817-b778-54a1f63d4002",
                    "expectedControlType": "Touch",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "TouchPress",
                    "type": "Button",
                    "id": "48922ed9-8908-423c-84ef-bcf085759fe9",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "1c563c14-af1f-4247-8f2d-7d03e26d3d7c",
                    "path": "<Touchscreen>/primaryTouch",
                    "interactions": "",
                    "processors": "",
                    "groups": "Touch",
                    "action": "TouchPoint",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b12c3a27-6bf6-4c74-822e-b4368d842cec",
                    "path": "<Touchscreen>/primaryTouch/press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchPress",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}